[package]
name = "gh-ghes-webhook"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.20", features = ["derive"] }
ctrlc = { version = "3.4.5", features = ["termination"] }
log = "0.4.22"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
simplelog = "0.12.2"
which = "7.0.0"

[dev-dependencies]
httpmock = "0.8.0-alpha.1"
nix = "0.29.0"
